add images, styles, footer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                              <a href="#видыпроцедур">Виды процедур</a> 
                         </li>
                         <li class="menu-item">
-                             <a href="#прайслист">Прайс Лист</a> 
+                             <a href="#прайслист">Прайс лист</a> 
                         </li>
                         <li class="menu-item">
                             <a href="#записаться">Записаться</a>
@@ -49,11 +49,38 @@
         <div class="menu-one">
             <h1>О нас</h1>
         </div>
+        <ul>
+            <li>
+                <div>
+                    <img src="images/info-about-us/info.jpg" alt="about us">
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="images/info-about-us/info2.jpg" alt="about us">
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="images/info-about-us/info3.jpg" alt="about us">
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="images/info-about-us/info4.jpg" alt="about us">
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="images/info-about-us/info5.jpg" alt="about us">
+                </div>
+            </li>
+        </ul>
         </section>
         <section>
             <div class="menu-two"></div>
             <h1>Виды процедур</h1>
-            <ul>
+            <ul class="menu-type">
                 <li>
                     <div class="tupe-of-classic">
                         <img src="images/classic.jpg" alt="classic eyelashes">
