add footer, upgrade styles

--- a/index.html
+++ b/index.html
@@ -36,13 +36,6 @@
                 </nav> 
             </div>
         </section>
-        <section class="top-number">
-            <div class="text-holder">
-                <div class="title-text-block">
-                    <a href="">+7(904)-281-87-79</a>
-                </div>
-            </div>
-        </section>
     </header>
     <main>
         <section>
@@ -50,31 +43,28 @@
             <h1>О нас</h1>
         </div>
         <ul>
-            <li>
-                <div>
-                    <img src="images/info-about-us/info.jpg" alt="about us">
+            <div class="images-us">
+                <li>
+                    <div>
+                        <img src="images/info-about-us/info.jpg" alt="about us">
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <img src="images/info-about-us/info3.jpg" alt="about us">
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <img src="images/info-about-us/info4.jpg" alt="about us">
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <img src="images/info-about-us/info5.jpg" alt="about us">
                 </div>
             </li>
-            <li>
-                <div>
-                    <img src="images/info-about-us/info2.jpg" alt="about us">
-                </div>
-            </li>
-            <li>
-                <div>
-                    <img src="images/info-about-us/info3.jpg" alt="about us">
-                </div>
-            </li>
-            <li>
-                <div>
-                    <img src="images/info-about-us/info4.jpg" alt="about us">
-                </div>
-            </li>
-            <li>
-                <div>
-                    <img src="images/info-about-us/info5.jpg" alt="about us">
-                </div>
-            </li>
+            </div>
         </ul>
         </section>
         <section>
@@ -82,7 +72,7 @@
             <h1>Виды процедур</h1>
             <ul class="menu-type">
                 <li>
-                    <div class="tupe-of-classic">
+                    <div class="type-of-classic">
                         <img src="images/classic.jpg" alt="classic eyelashes">
                     </div>
                     <div class="menu-content">
@@ -163,11 +153,35 @@
                 </li>
                 <li>
                     <div class="education">
-                        <p>Скоро</p>
+                        <h1>Скоро</h1>
+                        <h2>Обучение базовым знаниям по наращиванию ресниц</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti, nemo odio aliquid fuga at doloribus enim quo maiores dolores veritatis quidem laboriosam soluta illo amet perspiciatis necessitatibus minima nobis voluptatibus?</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque, quam! Aliquid, cupiditate voluptas? Amet sequi autem blanditiis atque eos unde facere maxime possimus, asperiores neque numquam ab cum doloremque provident?</p>
                     </div>
                 </li>
             </ul>
         </section>
     </main>
+    <footer>
+        <section class="footer-section">
+            <ul>
+                <li>
+                    <a href="https://vk.com/lashs_boom">
+                        <img src="images/footer-images/vk.png" alt="vk logo">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://t.me/juliabldrv99">
+                        <img src="images/footer-images/tg.png" alt="telegram logo">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://wa.me/79042818779">
+                        <img src="images/footer-images/watsapp.png" alt="watsapp logo">
+                    </a>
+                </li>
+            </ul>
+        </section>
+    </footer>
 </body>
 </html>
