add images, upgrade styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lash's Boom</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -15,13 +21,14 @@
                         <img src="images/logo-lb.png" alt="lashs-boom site">
                     </a>
                 </div>
-            </div>    
+            </div>  
         </section>
         <section class="top-menu">    
             <div class="menu-header"> 
                 <nav class="component-menu menu"> 
                     <ul class="component-menu-list"> 
-                        <li class="menu-item"> <a href="#онас">О нас</a> 
+                        <li class="menu-item">
+                            <a href="#онас">О нас</a> 
                         </li>
                         <li class="menu-item">
                              <a href="#видыпроцедур">Виды процедур</a> 
@@ -38,36 +45,68 @@
         </section>
     </header>
     <main>
-        <section>
+        <section id="онас">
         <div class="menu-one">
             <h1>О нас</h1>
         </div>
+        <div class="images-us">
         <ul>
-            <div class="images-us">
-                <li>
-                    <div>
-                        <img src="images/info-about-us/info.jpg" alt="about us">
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <img src="images/info-about-us/info3.jpg" alt="about us">
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <img src="images/info-about-us/info4.jpg" alt="about us">
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <img src="images/info-about-us/info5.jpg" alt="about us">
+            <li>
+                <div>
+                    <img src="images/info-about-us/info.jpg" alt="about us">
                 </div>
             </li>
-            </div>
+            <li>
+                <div>
+                    <img src="images/info-about-us/info3.jpg" alt="about us">
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="images/info-about-us/info4.jpg" alt="about us">
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="images/info-about-us/info5.jpg" alt="about us">
+                </div>
+            </li>
         </ul>
+        </div>
+        <div class="menu-about-us">
+            <p>
+                Рада приветствовать Вас здесь! Меня зовут Юлия, я мастер по наращиванию и ламинированию ресниц с опытом работы 4 года. За все это время более 3-х тысяч прекрасных девушек остались в восторге от своего нового взгляда после того, как побывали у меня на процедуре.
+            </p>
+            <h2>
+                Выбирая меня как мастера вы получаете:
+            </h2>
+            <ul>
+                <li>
+                    Индивидуальный подход к каждому клиенту
+                </li>
+                <li>
+                    Развернутую консультацию перед процедурой, чтобы поминать, какой результат будет в итоге
+                </li>
+                <li>
+                    Качественные материалы, которые зарекомендовали себя на мировом рынке (Barbara,Lovely,Be perfect, Le mat, Enigma)
+                </li>
+                <li>
+                    Удобную кушетку, выполненную на заказ, теплый пледик и подборка любимых многими программ
+                </li>
+                <li>
+                    Долгую носку материала (4-8 недель)
+                </li>
+            </ul>
+            <div class="about-us-p"> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="w-6 h-6">
+                <path strokeLinecap="round" strokeLinejoin="round" d="m20.893 13.393-1.135-1.135a2.252 2.252 0 0 1-.421-.585l-1.08-2.16a.414.414 0 0 0-.663-.107.827.827 0 0 1-.812.21l-1.273-.363a.89.89 0 0 0-.738 1.595l.587.39c.59.395.674 1.23.172 1.732l-.2.2c-.212.212-.33.498-.33.796v.41c0 .409-.11.809-.32 1.158l-1.315 2.191a2.11 2.11 0 0 1-1.81 1.025 1.055 1.055 0 0 1-1.055-1.055v-1.172c0-.92-.56-1.747-1.414-2.089l-.655-.261a2.25 2.25 0 0 1-1.383-2.46l.007-.042a2.25 2.25 0 0 1 .29-.787l.09-.15a2.25 2.25 0 0 1 2.37-1.048l1.178.236a1.125 1.125 0 0 0 1.302-.795l.208-.73a1.125 1.125 0 0 0-.578-1.315l-.665-.332-.091.091a2.25 2.25 0 0 1-1.591.659h-.18c-.249 0-.487.1-.662.274a.931.931 0 0 1-1.458-1.137l1.411-2.353a2.25 2.25 0 0 0 .286-.76m11.928 9.869A9 9 0 0 0 8.965 3.525m11.928 9.868A9 9 0 1 1 8.965 3.525" />
+              </svg>              
+            <p>
+                Моя уютная студия находится в самом сердце города Липецка по адресу Фрунзе,21 (Фрунзенский бизнес-центр)
+            </p>
+            </div>
+        </div>
         </section>
-        <section>
+        <section id="видыпроцедур">
             <div class="menu-two"></div>
             <h1>Виды процедур</h1>
             <ul class="menu-type">
@@ -77,8 +116,10 @@
                     </div>
                     <div class="menu-content">
                         <div>
-                            <h2>Классика</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi dolorem nulla possimus, perferendis, enim, labore quis quam illum minus incidunt fugiat ab. Maiores quisquam debitis temporibus qui doloremque in!</p>
+                            <h2>Классика (1D)</h2>
+                            <p>
+                                Это самое естественное наращивание, для тех, кто любит натуральность. Данный объем предполагает то, что мастер на каждую родную ресницу клиента клеит одну искусственную. Идеальный вариант для тех, кто делает наращивание впервые.
+                            </p>
                         </div>
                     </div>
                 </li>
@@ -89,7 +130,9 @@
                     <div class="menu-content">
                         <div>
                             <h2>1.5D</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi dolorem nulla possimus, perferendis, enim, labore quis quam illum minus incidunt fugiat ab. Maiores quisquam debitis temporibus qui doloremque in!</p>
+                            <p>
+                                Подходит для создания естественного образа. Предполагает чередование объемов, т.е. на одну родную ресничку ставиться одна искусственная, на рядом стоящую пучок из двух ресниц, и так на протяжении всей ресничной линии.
+                            </p>
                         </div>
                 </li>
                 <li>
@@ -99,7 +142,9 @@
                     <div class="menu-content">
                         <div>
                             <h2>2D</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi dolorem nulla possimus, perferendis, enim, labore quis quam illum minus incidunt fugiat ab. Maiores quisquam debitis temporibus qui doloremque in!</p>
+                            <p>
+                                Самый популярный выбор среди клиентов. Данное наращивание придает яркость взгляда, не перегружая его. На каждую родную ресницу клеится две искусственные.
+                            </p>
                         </div>
                 </li>
                 <li>
@@ -109,7 +154,9 @@
                     <div class="menu-content">
                         <div>
                             <h2>3D</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi dolorem nulla possimus, perferendis, enim, labore quis quam illum minus incidunt fugiat ab. Maiores quisquam debitis temporibus qui doloremque in!</p>
+                            <p>
+                                В процессе такого наращивания на одну натуральную ресничку накладывается сразу 3 искусственных. Такой объем подойдет для тех, кто любит яркий взгляд и хочет поспать на 20 минут дольше утром.
+                            </p>
                         </div>
                 </li>
                 <li>
@@ -119,26 +166,9 @@
                     <div class="menu-content">
                         <div>
                             <h2>4D</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi dolorem nulla possimus, perferendis, enim, labore quis quam illum minus incidunt fugiat ab. Maiores quisquam debitis temporibus qui doloremque in!</p>
-                        </div>
-                </li>
-                <li>
-                    <div class="type-of-wet">
-                        <img src="images/mokryi.jpg" alt="wet effect">
-                    </div>
-                    <div class="menu-content">
-                        <div>
-                            <h2>Мокрый эффект</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi dolorem nulla possimus, perferendis, enim, labore quis quam illum minus incidunt fugiat ab. Maiores quisquam debitis temporibus qui doloremque in!</p>
-                        </div>
-                </li>
-                <li>
-                    <div class="type-of-bends-lashs">
-                        <img src="images/izgiby.jpg" alt="bends of lashs">
-                    </div>
-                    <div class="menu-content">
-                        <div>
-                            <h2>Виды изгибов</h2>
+                            <p>
+                                Можно отнести к мега-обьему, ведь на одну натуральную ресницу ставится сразу четыре искусственные. Здесь важно оценить качество и толщину натуральных ресниц, ведь если не верно выбрать объем, то можно испортить ресницы. Подойдет для эффектных девушек с ярким образом.
+                            </p>
                         </div>
                 </li>
                 <li>
@@ -148,22 +178,64 @@
                     <div class="menu-content">
                         <div>
                             <h2>Ламинирование</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati commodi dolorem nulla possimus, perferendis, enim, labore quis quam illum minus incidunt fugiat ab. Maiores quisquam debitis temporibus qui doloremque in!</p>
+                            <p>Это косметическая процедура с полуперманентным результатом, улучшающая их внешний вид. Последовательное нанесение специальных составов приподнимает и завивает волоски, делая их длиннее и придавая им привлекательную форму. В результате ресницы выглядят более здоровыми и ухоженными.</p>
                         </div>
                 </li>
                 <li>
-                    <div class="education">
-                        <h1>Скоро</h1>
-                        <h2>Обучение базовым знаниям по наращиванию ресниц</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti, nemo odio aliquid fuga at doloribus enim quo maiores dolores veritatis quidem laboriosam soluta illo amet perspiciatis necessitatibus minima nobis voluptatibus?</p>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque, quam! Aliquid, cupiditate voluptas? Amet sequi autem blanditiis atque eos unde facere maxime possimus, asperiores neque numquam ab cum doloremque provident?</p>
+                    <div class="type-of-bends-lashs">
+                        <img id="izg" src="images/izgiby.jpg" alt="bends of lashs">
                     </div>
+                    <div class="menu-content">
+                        <div>
+                            <h2>Виды изгибов</h2>
+                            <p>
+                                <strong>«А КАКОЙ ИЗГИБ МНЕ ПОДОЙДЁТ?»</strong> - этот вопрос самый часто задаваемый перед процедурой наращивания ресниц. Расскажу вам про 4 основных вида изгибов.
+                            </p>
+                            <h3>Изгиб С</h3>
+                            <p>
+                                Самый натуральный и наиболее подходящий по изгибу родным ресницам. Если вы хотите подчеркнуть свой взгляд, но при этом не делать сильный акцент на ресницах, то выбирайте его. Хорошо подходит под эффект стрелки.
+                            </p>
+                            <h3>Изгиб D</h3>
+                            <p>
+                                Более подкрученный изгиб. Есть категория девчонок, которые выделяют только его! Ведь изгиб D очень хорошо ложится на вниз растущие ресницы! А главное, что несмотря на свой сильный завиток, он не выглядит «ненатурально»!
+                            </p>
+                            <h3>Изгиб M</h3>
+                            <p>
+                                Я его люблю за то, что он очень круто открывает взгляд. Делает тот самый желанный акцент там, где надо. Отлично скрывает нависшее веко.
+                            </p>
+                            <h3>Изгиб L</h3>
+                            <p>
+                                Ножка ресницы под углом 90°. Удлиняющий. Идеально для создания секси стрелки.
+                            </p>
+                            <p>
+                                Но не забывайте, что я могу с легкостью смиксовать несколько изгибов между собой и сделать тем самым ваше наращивание незабываемым и очень индивидуальным🥰
+                            </p>
+                        </div>
                 </li>
             </ul>
         </section>
+        <section id="прайслист">
+            <div>
+                <h1>Прайс лист</h1>
+            </div>
+            <div class="price-images">
+                <img src="images/price.jpg" alt="price">
+            </div>
+        </section>
     </main>
-    <footer>
+    <footer id="записаться">
         <section class="footer-section">
+            <div class="footer-div">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
+                </svg>
+                <p>
+                    Записаться можно тут
+                </p>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
+                </svg>
+            </div>
             <ul>
                 <li>
                     <a href="https://vk.com/lashs_boom">
